--- a/css/menu.css
+++ b/css/menu.css
@@ -11,7 +11,7 @@ padding: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: bisque;
+    background-color: rgb(8, 8, 8);
     
   }
   
@@ -53,6 +53,7 @@ padding: 0;
         visibility: hidden;
         overflow-y: hidden;
         transition: all 0.6s ease;
+        margin-top: 1.5em;
         
       }
    
@@ -65,7 +66,7 @@ padding: 0;
       height: 60px;}
   
     #nav.active #menu {
-      height: calc(101vh - 50px);
+      height: calc(98vh - 50px);
       visibility: visible;
       overflow-y: auto;
       
@@ -86,16 +87,23 @@ padding: 0;
     #btn-mobile {
       display: block;
       border: none;
-      background: none;
       cursor: pointer;
-      width: 28px;
-      margin-right: 1em;
-      overflow-x: hidden;
+      width: 33px;
+      height: 1px;
+      background: none;
+      
+     
   
     }
     #menuhamburger {
-      display: block;
-     
+      display: block; 
+    }
+
+    #xbuger {
+      position: absolute;
+      margin-top: -1em;
+      margin-left: -2em;
+      
     }
   
   }
