--- a/css/menu.css
+++ b/css/menu.css
@@ -16,6 +16,9 @@ padding: 0;
   }
   */
   nav {
+    position: fixed;
+    z-index: 2;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -50,18 +53,19 @@ padding: 0;
   @media (max-width: 1000px) {
     body {
       overflow-x: hidden;
+      height: 100vh;
     }
     .nav-list {
-      position: absolute;
+      position: fixed;
       top: 8vh;
       right: 0;
       width: 100%;
-      height: 92vh;
-      z-index: 1000;
+      height: 100vh;
+      z-index: 10;
       background: #23232e;
       flex-direction: column;
-      align-items: center;
       justify-content: space-around;
+      align-items: center;
       transform: translateX(100%);
       transition: transform 0.3s ease-in;
     }
@@ -73,52 +77,11 @@ padding: 0;
       display: block;
       border: 2px;
     }
+
+    .nav-list.active .pg1 {
+      overflow-y: hidden; 
+    }
     
-   /*
-    #menu {
-        position: fixed;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        right: 0;
-        background-color: bisque;
-        padding-top: 10%;
-        z-index: 1000;
-        height: 0;
-        visibility: hidden;
-        overflow-y: hidden;
-        transition: all 0.6s ease;
-        margin-top: 1.5em;
-        
-      }
-   
-  
-    #header {
-      box-sizing: border-box;
-      position: fixed;
-      z-index: 200;
-      width: 100%;
-      height: 60px;}
-  
-    #nav.active #menu {
-      height: calc(98vh - 50px);
-      visibility: visible;
-      overflow-y: auto;
-      
-      
-    }
-    #menu a {
-      padding: 1rem 0;
-      margin: 0 1rem;
-     
-    }
-    #menu a:hover {
-      padding-left: 10px;
-      transition: all 0.3s ease;
-      background: scroll;
-       } */
-  
-  
   }
   .nav-list.active {
     transform: translateX(0);
@@ -153,32 +116,32 @@ padding: 0;
   align-items: center;
   justify-content: center;
   background: #333;
-  margin:0; 
-  padding: 0;
   overflow: hidden;
-
+  padding-top: 3.3em;
   } 
 
   .glide__slide img{
     width: 100%;
-    
+    z-index: 0;
   }
   
   .glide__slide{
     filter: blur(6px);
     opacity: .7;
     transition: .3s linear;
-   
+    z-index: 0;
   }
   
   .glide__slide--active{
     opacity: 1;
     filter: none;
     transform: scale(1.1);
+    z-index: 0;
     
   }
   
   .glide__slides{
     overflow: visible;
+    z-index: 0;
     
   }
